tests/reference/asr-specific_type_intrinsic-60c666c.stderr
semantic error: Argument 1 of dabs must be of double precision real type
 --> tests/errors/specific_type_intrinsic.f90:2:13
  |
2 |     print*, dabs(1)
  |             ^^^^^^^ 
